# KZG-Commitment

./: CMakeLists.txt  README.md
cmake/: bls.cmake  gtest.cmake  rand.cmake  transcript.cmake
include/challenge/: transcript.h
include/domain/: domain.h  fourier.h  iterator.h
include/exception/: exception.h
include/polynomial/: coefficient.h  evaluation.h
include/process/: commit.h  evaluate.h  verify.h
include/structure/: commit_key.h  commitment.h  opening_key.h  proofs.h  reference_string.h
include/util/: field.h  random.h
include/utils/: field.h  group.h
src/challenge/: transcript.cpp
src/domain/: domain.cpp  fourier.cpp  iterator.cpp
src/exception/: exception.cpp
src/polynomial/: coefficient.cpp  evaluation.cpp
src/process/: commit.cpp  evaluate.cpp  verify.cpp
src/structure/: commit_key.cpp  commitment.cpp  opening_key.cpp  reference_string.cpp
src/util/: field.cpp  group.cpp
src/utils/: field.cpp  group.cpp
test/: CMakeLists.txt  test_commitment.cpp  test_domain.cpp  test_poly_coeff.cpp  test_poly_eval.cpp  test_srs.cpp  test_util.cpp
