CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(KZG_Commitment VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
INCLUDE(BLS)
INCLUDE(Gtest)
INCLUDE(Rand)

ADD_SUBDIRECTORY(test)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        KZG_Commitment
        ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
        KZG_Commitment
        PUBLIC ${PROJECT_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(
        KZG_Commitment
        PUBLIC BLS12_381
        PUBLIC Rand
)